--- a/Project/Project.vcxproj.filters
+++ b/Project/Project.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="division.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="functions.h">
